# libqrencode

./: CMakeLists.txt  ChangeLog  config.h.cmake  mqrspec.c  qrenc.c  qrencode.c  qrencode.h  qrencode_inner.h  qrinput.c  qrinput.h  qrspec.c  qrspec.h  rscode.c  rscode.h
tests/: test_estimatebit.c  test_mmask.c  test_monkey.c  test_mqrspec.c  test_qrencode.c  test_qrinput.c  test_qrspec.c  test_rs.c  test_split.c  view_qrcode.c
